[package]
name = "polarskdb"
version = "0.1.0"
edition = "2021"

include = [
    "/pyproject.toml",
    "/kdb",
    "/src",
    "/py_types",
]


[lib]
name = "polarskdb"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "polarskdb"

[dependencies]
pyo3 = "0.18.3"
pyo3-log = "0.8.1"
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
kdbplus = {version="0.3.8", features=["ipc", "api"]}
polars-core = { version = "0.28.0" }

# my packages
py_types = { path = "py_types"}
kdb = { path = "kdb" }

[workspace]
members = ["kdb/", "py_types/"]


