[package]
name = "py_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module"] }
chrono = { version = "0.4"}
serde = { version = "1.0", features = ["derive"] }
kdbplus = {version="0.3.8", features=["ipc"]}

[dev-dependencies]
serde_json = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
bigdecimal = "0.3.0"